# Codeveloper_Tools_Package

./: README.md
codeveloper_tools/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
codeveloper_tools/example/: MyFlipRotateTimer.dart  main.dart
codeveloper_tools/example/windows/: CMakeLists.txt
codeveloper_tools/lib/: codeveloper_tools.dart
codeveloper_tools/lib/MyTools/: MyFunctionTools.dart  MyTools.dart
codeveloper_tools/lib/MyTools/Functions/: WidgetListBuilder.dart
codeveloper_tools/lib/MyTools/Functions/Launcher_Functions/: LaunchURL.dart
codeveloper_tools/lib/MyTools/tools/App_Containing_Tools/: ExpandableThrowableButton.dart  SearchAppBar.dart  StageIndicator.dart  TBMaker.dart
codeveloper_tools/lib/MyTools/tools/Audio_tools/: audio_recorder.dart  miniAudioPlayer.dart
codeveloper_tools/lib/MyTools/tools/Button_Tools/: MyButton.dart  StarsRating.dart
codeveloper_tools/lib/MyTools/tools/Generator_Tools/: CustomToolTip.dart  FlipCard.dart  GenerateStarRating.dart  MyPopUpWidget.dart  dayListGenerator.dart  generateQRCode.dart
codeveloper_tools/lib/MyTools/tools/Grids_Tools/: WGrid.dart
codeveloper_tools/lib/MyTools/tools/Painter_tools/: PercentageCircle.dart
codeveloper_tools/lib/MyTools/tools/Switch_Tools/: MySwitch.dart
codeveloper_tools/lib/src/: platform_interface.dart
codeveloper_tools/test/: codeveloper_tools_test.dart
codeveloper_tools/windows/: CMakeLists.txt  codeveloper_tools_plugin.cpp  codeveloper_tools_plugin.h
codeveloper_tools/windows/include/codeveloper_tools/: codeveloper_tools_plugin.h
(+31 files in other folders)
